2009-09-03  Tristan Gingold  <gingold@adacore.com>

	* as.h (__PRETTY_FUNCTION__): Use the same definition as bfd/libbfd.h.

2009-09-02  Jie Zhang  <jie.zhang@analog.com>

	* config/bfin-parse.y (value_match): Use int instead of long.

	From  Michael Frysinger  <michael.frysinger@analog.com>
	* config/bfin-defs.h (Expr_Node_Value): Declare the i_value
	member as long long.

2009-09-02  Jie Zhang  <jie.zhang@analog.com>

	From  Bernd Schmidt  <bernd.schmidt@analog.com>
	* config/gas/bfin-parse.y (asm_1): Clean up and unify error handling
	for load and store insns.
	(neg_value): Delete function.

2009-09-01  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* Makefile.am (m68k-parse.o, bfin-lex.o, itbl-lex.o, itbl-parse.o):
	Supply correct source file name for generated files which may be
	in $(srcdir).
	* Makefile.in: Regenerate.

2009-09-01  H.J. Lu  <hongjiu.lu@intel.com>

	* version.c (parse_args): Change to "Copyright 2009".

2009-09-01  Tristan Gingold  <gingold@adacore.com>

	* makefile.vms: Adjust include pathes.  Remove useless vaxctrl
	library.
	* configure.com: Ported to Itanium VMS.  Create build.com DCL script.
	Make edit silent.

2009-09-01  Jie Zhang  <jie.zhang@analog.com>

	* config/bfin-parse.y (asm_1): Only PREG and DREG are allowed
	in comparison.

2009-09-01  Jie Zhang  <jie.zhang@analog.com>

	2007-09-28  Bernd Schmidt  <bernd.schmidt@analog.com>
	* config/tc-bfin.c (bfin_fix_adjustable): Partially revert the
	2007-08-23 change; BFD_RELOC_BFIN_GOT is not adjustable.

	2007-08-23  Jie Zhang  <jie.zhang@analog.com>
	* config/tc-bfin.c (bfin_fix_adjustable): Adjust
	BFD_RELOC_BFIN_GOT, BFD_RELOC_BFIN_GOT17M4 and
	BFD_RELOC_BFIN_FUNCDESC_GOT17M4.

2009-09-01  Jie Zhang  <jie.zhang@analog.com>

	* read.c (TC_START_LABEL): Add a new argument.
	(read_a_source_file): Pass the beginning of the symbol through
	the new argument of TC_START_LABEL.
	* config/tc-arm.h (TC_START_LABEL): Add a new argument.